# ollm

./: .gitignore  LICENSE  README.md  attention.py  enhanced_optimization_demo.py  example.py  example_asr.py  example_audio.py  example_image.py  example_modified.py  example_multimodality.py  example_test.py  export_model.py  gds_loader.py  inference.sh  llama.py  optimization_demo.py  profile_examples.py  pyproject.toml  requirements.txt  run_example.bash  setup_optimizations.sh  temp.py  test_consolidated_optimizations.py  test_optimizations.py  utils.py
doc/: KV_COMPRESSION_OPTIMIZATION.md
samples/: 2k_sample.txt  45k_sample.txt  85k_sample.txt
scripts/: export_model.py  full_tests.py  gpt_oss_export.py  qwen3_next_export.py  scripts.py  test.py
src/ollm/: __init__.py  gds_loader.py  gemma3.py  gpt_oss.py  gpt_oss_attention.py  inference.py  kvcache.py  llama.py  optimization_profiles.py  qwen3_next.py  qwen3next.py  utils.py  voxtral.py
src/ollm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ollm/optimizations/: __init__.py  adaptive_optimizer.py  advanced_kv_compression.py  attention_optimizations.py  context_compression.py  dynamic_batching.py  enhanced_memory.py  intelligent_attention_router.py  memory_pool.py  prefetching.py  speculative_decoding.py  streaming.py  triton_kernels.py
temp/: 100k_sample.txt  10k_sample.txt  landing_gprompt.txt
