[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ollm"
version = "0.1.2"
description = "LLM inference library"
authors = [
  { name="Anuar Sharafudinov", email="anuarsh@ailabs.us" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch", #tested: 2.6.0, 2.8.0?
    "transformers>=4.55.0", #tested: 4.52.3(legacy), 4.55.4(new)
    "accelerate"
]

[project.urls]
"Homepage" = "https://github.com/Mega4alik/ollm"
"Bug Tracker" = "https://github.com/Mega4alik/ollm/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
